so much features

--- a/packages/flue3/templates/index.spa.html
+++ b/packages/flue3/templates/index.spa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <div id="#_FLUE3_APP_ID-spa-loading"><!--#_FLUE3_SPA_LOADING--></div>
     <div id="#_FLUE3_APP_ID"></div>
 </body>
 </html>
