add new features and fixes

--- a/packages/flue3/templates/index.ssr.html
+++ b/packages/flue3/templates/index.ssr.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!--#_FLUE3_HEAD-->
 </head>
 <body>
     <div id="#_FLUE3_APP_ID"><!--#_FLUE3_SSR_BODY--></div>
