--- a/packages/flue3/templates/index.spa.html
+++ b/packages/flue3/templates/index.spa.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!--#_FLUE3_HEAD-->
 </head>
 <body>
     <div id="#_FLUE3_APP_ID-spa-loading"><!--#_FLUE3_SPA_LOADING--></div>
